tests/models/enum/unnamed/i64/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        i64
    ),
}
fn main() {}
